Fix inputs wrapping

--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,8 @@ button{
 }
 input{
   font-size: 1rem;
-  background:none;
+  width: 8.9rem;
+  background: none;
   border: none;
   border-bottom: solid 0.07rem #16a085;
   transition: border-color 0.2s;
